Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60565

QtWebengine broke binary backward compatibility

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • P1: Critical
    • Resolution: Done
    • 5.9.0 Beta 3
    • 5.9.0 RC
    • WebEngine
    • None
    • Gentoo x86_64
    • 55b54951b80cd8fa4363b3c9d492be74c0d2d5da

    Description

      When I run a any program, compiled against 5.8.0, I get the following:

       $ qtcreator 
      qtcreator: relocation error: /usr/lib64/qtcreator/plugins/libHelp.so: symbol _Znwm, version Qt_5 not defined in file libQt5WebEngineCore.so.5 with link time reference
      

      Edited:

      Extra symbols are exported by shim allocator which was fixed in QTBUG-57778, unfortunately is was done after 5.8.0 release. This includes operators for new,new[],delete delete[]

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              michal Michal Klocek
              eugeneshalygin Eugene Shalygin
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes